Add caption to resources/themes/zimera-theme.yml so the caption will be centered

--- a/resources/themes/zimera-theme.yml
+++ b/resources/themes/zimera-theme.yml
@@ -80,3 +80,7 @@ title-page:
   logo:
     image: image:{docdir}/images/logo-zimera-corp.png[width=200]
     top: 5%
+caption:
+  align: center
+  font_size: $base_font_size * 0.95
+  font_style: italic
