--- a/resources/themes/zimera-theme.yml
+++ b/resources/themes/zimera-theme.yml
@@ -17,6 +17,8 @@ page:
   layout: portrait
   margin: [0.75in, 1in, 0.75in, 1in]
   size: Letter
+  numbering:
+    start-at: 5
 base:
   text_align: justify
   font-color: 333333
